Seccion validacion sin ocultar y modal para general certificado

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -15,6 +15,7 @@
     align-items: center;
     margin: 10px;
     flex-wrap: wrap;
+    cursor: pointer;
 }
 .footer .social-icons li, footer .menu li {
     list-style: none;
